backend implemented very well .ready for testing api

--- a/Infrastructure.Messaging/Infrastructure.Messaging.csproj
+++ b/Infrastructure.Messaging/Infrastructure.Messaging.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Kavenegar" Version="1.2.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Core.Application\Core.Application.csproj" />
+  </ItemGroup>
+
 </Project>
