--- a/Vamino_WebAPI/appsettings.json
+++ b/Vamino_WebAPI/appsettings.json
@@ -1,9 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "Database": {
+    "ConnectionString": "Server=localhost;Database=VaminioDb;User Id=sa;Password=YourStrong@Passw0rd;TrustServerCertificate=True;",
+    "DatabaseName": "VaminioDb",
+    "ServerName": "localhost",
+    "MaxConnectionPoolSize": 100,
+    "ConnectionTimeout": 30,
+    "CommandTimeout": 60,
+    "EnableAutoScaling": true,
+    "EnableReadReplica": true,
+    "ReadReplicaConnectionString": "Server=replica-server;Database=VaminioDb;User Id=sa;Password=YourStrong@Passw0rd;TrustServerCertificate=True;",
+    "EncryptConnection": true,
+    "EnableDistributedTransactions": false,
+    "MaxRetryCount": 3,
+    "RetryDelayMilliseconds": 200
+  }
 }
