--- a/Vamino_WebAPI/appsettings.json
+++ b/Vamino_WebAPI/appsettings.json
@@ -1,14 +1,14 @@
 {
   "Database": {
-    "ConnectionString": "Server=localhost;Database=VaminioDb;User Id=sa;Password=YourStrong@Passw0rd;TrustServerCertificate=True;",
+    "ConnectionString": "Data Source=VICTUS-15\\SQLEXPRESS;Initial Catalog=VaminioDb;Integrated Security=True;Trust Server Certificate=True",
     "DatabaseName": "VaminioDb",
-    "ServerName": "localhost",
+    "ServerName": "VICTUS-15\\SQLEXPRESS",
     "MaxConnectionPoolSize": 100,
     "ConnectionTimeout": 30,
     "CommandTimeout": 60,
     "EnableAutoScaling": true,
     "EnableReadReplica": true,
-    "ReadReplicaConnectionString": "Server=replica-server;Database=VaminioDb;User Id=sa;Password=YourStrong@Passw0rd;TrustServerCertificate=True;",
+    "ReadReplicaConnectionString": "Data Source=VICTUS-15\\SQLEXPRESS;Initial Catalog=VaminioDb;Integrated Security=True;Trust Server Certificate=True",
     "EncryptConnection": true,
     "EnableDistributedTransactions": false,
     "MaxRetryCount": 3,
