--- a/Vamino_WebAPI/appsettings.json
+++ b/Vamino_WebAPI/appsettings.json
@@ -13,5 +13,9 @@
     "EnableDistributedTransactions": false,
     "MaxRetryCount": 3,
     "RetryDelayMilliseconds": 200
-  }
+  },
+  "AllowedOrigins": [
+    "http://localhost:4200",
+    "https://example.com"
+  ]
 }
