pos implemented without sdk

--- a/Vamino_WebAPI/Vamino_WebAPI.csproj
+++ b/Vamino_WebAPI/Vamino_WebAPI.csproj
@@ -18,6 +18,7 @@
     <ProjectReference Include="..\Core.Application\Core.Application.csproj" />
     <ProjectReference Include="..\Infrastructure.Messaging\Infrastructure.Messaging.csproj" />
     <ProjectReference Include="..\Infrastructure.Persistence\Infrastructure.Persistence.csproj" />
+    <ProjectReference Include="..\Infrastructure.Pos\Infrastructure.Pos.csproj" />
     <ProjectReference Include="..\Infrastructure.Security\Infrastructure.Security.csproj" />
   </ItemGroup>
 
