--- a/Vamino_WebAPI/appsettings.json
+++ b/Vamino_WebAPI/appsettings.json
@@ -17,5 +17,14 @@
   "AllowedOrigins": [
     "http://localhost:4200",
     "https://example.com"
-  ]
+  ],
+  "Pos": {
+    "Vendor": "UnionPay",
+    "CommType": "USB",
+    "Port": "COM3",
+    "Ip": "",
+    "PortNumber": 10009,
+    "TimeoutMs": 60000,
+    "Currency": "IRR"
+  }
 }
